# sugar-sdk

./: BREAKING.md  MANIFEST.in  README.md  REPORT.md  abi.html  abis.py  claude  config.html  config.html.md  deposit.html  deposit.html.md  helpers.html  helpers.html.md  honey.py  honey.yaml  index.html  index.html.md  pool.html  pool.html.md  price.html  price.html.md  pyproject.toml  pytest.ini  refactor-amount.diff  search.json  settings.ini  setup.py  sitemap.xml  supersim.py  token.html  token.html.md
.claude/skills/sugar/: SKILL.md  reference.md
.claude/skills/sugar/scripts/: sugar-doctor.sh  (+1 more)
.github/workflows/: benchmark.yaml  test.yaml
src/: abi.ipynb  chains.ipynb  cli.ipynb  config.ipynb  deposit.ipynb  helpers.ipynb  index.ipynb  pool.ipynb  position.ipynb  price.ipynb  quote.ipynb  superswap.ipynb  swap.ipynb  test_superswaps.ipynb  test_superswaps_async.ipynb  test_swaps.ipynb  token.ipynb  wallet.ipynb  withdraw.ipynb
sugar/: __init__.py  _modidx.py  abi.py  chains.py  cli.py  config.py  deposit.py  helpers.py  pool.py  position.py  price.py  quote.py  superswap.py  swap.py  token.py  wallet.py  withdraw.py
sugar/abis/: bridge_get_fee.json  bridge_transfer_remote.json  erc20.json  gauge_basic.json  gauge_cl.json  pool_basic.json  sugar.json  swapper.json
tests/: _signer.py  conftest.py  test_adaptive_sizing.py  test_base.py  test_chains_config.py  test_chains_network.py  test_cli.py  test_config.py  test_deposit.py  test_epochs.py  test_helpers.py  test_position.py  test_price_filtering.py  test_prices.py  test_quote.py  test_simnet.py  test_superswap.py  test_swap.py  test_token.py  test_tokens.py  test_withdraw.py
tools/: BENCHMARKING.md  benchmark_chains.py  benchmarks.py  focused_benchmark.py  quick_test.py  timer.py
