[build-system]
requires = ["setuptools==81.0.0"]
build-backend = "setuptools.build_meta"

[project]
name="sugar"
requires-python=">=3.9"
dynamic = [ "keywords", "description", "version", "dependencies", "optional-dependencies", "readme", "license", "authors", "classifiers", "entry-points", "scripts", "urls"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "settings.ini" }, { file = "setup.py" }]

[tool.pytest.ini_options]
# pytest-asyncio isn't used (we wrap async tests in asyncio.run); disable to silence its config warnings
addopts = "-p no:asyncio"
filterwarnings = [
    "ignore::DeprecationWarning:websockets.legacy",
    "ignore:enable_cleanup_closed ignored:DeprecationWarning",
]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["F", "E711", "E712", "E721"]
# project uses one-liners (`if x: y`) and multi-imports deliberately; don't fight that
ignore = ["E701", "E702", "E731", "E401"]
